@@ -89,6 +89,9 @@ src/match.h
 src/mguests.cpp
 src/mguests.h
 src/misc.h
+src/modules/Makefile
+src/modules/sample.cpp
+src/modules/sample.h
 src/modules.cpp
 src/modules.h
 src/move.cpp
